初始化模板

--- a/generator/template/src/styles/common.less
+++ b/generator/template/src/styles/common.less
@@ -1,4 +1,4 @@
-@import "./layout/_normalize";
+@import "./layout/normalize";
 @import "./layout/mixins";
 @import "~animate.css";
 ::-webkit-scrollbar-track {
