--- a/generator/template/src/styles/common.less
+++ b/generator/template/src/styles/common.less
@@ -35,6 +35,14 @@ body {
   //height: 100%;
   //transition: opacity,transform 0.5s cubic-bezier(0.55, 0, 0.1, 1);
 }
+.mask_transparent {
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+}
 .slide-left-enter,
 .slide-right-leave-active {
   opacity: 0;
